# simple_grasper

./: README.md
rosba_grasper/: CMakeLists.txt  package.xml
rosba_grasper/config/: config.yml
rosba_grasper/launch/: run.launch
rosba_grasper/src/: main.cpp
rosba_launch/: CMakeLists.txt  package.xml
rosba_launch/config/: config.rviz  pose.txt
rosba_launch/launch/: display.launch
rosba_msgs/: CMakeLists.txt  package.xml
rosba_msgs/msg/: GraspPose.msg  GraspPoses.msg
rosba_msgs/srv/: Grasp.srv
